[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/GUI/cruselogo_white.png" type="Texture" id=1]
[ext_resource path="res://GUI/hud.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/GUI/title.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Karla-ExtraBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Mainmenu.gd" type="Script" id=5]
[ext_resource path="res://Audio/BGM/Titlescreen_bgs.ogg" type="AudioStream" id=6]
[ext_resource path="res://GUI/tutorial.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "fadein"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 2, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Container:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.3, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Container:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "fadeout"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="Container" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="Sprite" parent="Container/HBoxContainer"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -1024, -1024 )

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NG" type="Button" parent="Container/VBoxContainer"]
margin_right = 66.0
margin_bottom = 15.0
text = "New Game"
align = 0

[node name="Tutorial" type="Button" parent="Container/VBoxContainer"]
margin_top = 19.0
margin_right = 66.0
margin_bottom = 34.0
text = "How to play"
align = 0

[node name="Quit" type="Button" parent="Container/VBoxContainer"]
margin_top = 38.0
margin_right = 66.0
margin_bottom = 53.0
text = "Quit"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fadein"
anims/fadein = SubResource( 1 )
anims/fadeout = SubResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.5
margin_top = -10.0
margin_right = 112.5
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Progress Squad Present"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "Music"

[node name="tutorial" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="Container/VBoxContainer/NG" to="." method="_on_NG_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
